--- a/Rapport2/benchmarks.tex
+++ b/Rapport2/benchmarks.tex
@@ -103,7 +103,7 @@ Another interesting observation from the figure is that the configurations (exce
 
 \todo{back det op med 2 MB via TOUCHED}
 
-From this point on, a node size of 4 MB is used when comparing against other other streams.
+From this point on, a node size of 4 MB and a buffer size of 32 kB is used when comparing against other other streams.
 
 \subsection{Comparison}
 
