--- a/Rapport2/ref.bib
+++ b/Rapport2/ref.bib
@@ -1,3 +1,24 @@
+@article{Fadel1999345,
+title = "Heaps and heapsort on secondary storage ",
+journal = "Theoretical Computer Science ",
+volume = "220",
+number = "2",
+pages = "345 - 362",
+year = "1999",
+note = "",
+issn = "0304-3975",
+doi = "http://dx.doi.org/10.1016/S0304-3975(99)00006-7",
+url = "http://www.sciencedirect.com/science/article/pii/S0304397599000067",
+author = "R. Fadel and K.V. Jakobsen and J. Katajainen and J. Teuhola",
+keywords = "Secondary storage",
+keywords = "Priority queues",
+keywords = "Heaps",
+keywords = "Sorting",
+keywords = "Heapsort "
+}
+
+
+
 @inproceedings{Frigo,
  author = {Frigo, Matteo and Leiserson, Charles E. and Prokop, Harald and Ramachandran, Sridhar},
  title = {Cache-Oblivious Algorithms},
