--- a/Rapport2/conclusion.tex
+++ b/Rapport2/conclusion.tex
@@ -1,1 +1,2 @@
-
+The rapport shows that external heapsort is slower than external mergesort which makes it less suitable for sorting. 
+However, it is only a small factor from external mergesort which indicates that it can be used as an external priority queue with reasonable performance. Its drawbacks as a priority queue is its lack of a 'decrease key' operation and its amortized time bound as opposed to worse case bounds.
