--- a/Rapport2/rapport.tex
+++ b/Rapport2/rapport.tex
@@ -8,11 +8,9 @@
 \usepackage{mathpazo}
 \usepackage{wasysym}
 \usepackage{graphicx}
-\usepackage{tikz,pgfplots}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{natbib} 
 \usepackage{geometry}
-\usetikzlibrary{fit,shapes.misc,snakes}
 \geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=4cm,rmargin=4cm}
 
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
@@ -103,7 +101,7 @@ The code has the following source files:
 \section{Conclusion}
 \input{conclusion.tex}
 
-\clearpage{}\bibliographystyle{plain}
+\bibliographystyle{plain}
 \addcontentsline{toc}{section}{\refname}\bibliography{ref}
 
 \end{document}
