--- a/Rapport2/test_setup.tex
+++ b/Rapport2/test_setup.tex
@@ -25,6 +25,6 @@ written in C++11 and compiled on Linux using the GCC 4.7 compiler. When measurem
 code was compiled using the \texttt{-O3 -flto -funroll-loops}
 optimization flags.
 
-All tests have been performed with uniform distributed random generated 32 bit integers. The variations between several runs were insignificant so we choose to run all tests once to be able to run as many configurations as possible.
+All tests have been performed with uniform distributed random generated 32 bit integers. The variations between several runs were insignificant so we choose to run all tests once in order to run as many configurations as possible.
 
-We measured I/Os with \texttt{/proc/diskstats} and before each test we ran \texttt{sync()}. \texttt{sync} forces a write of dirty buffers in the block buffer cache out to disk.
+We measured I/Os with \texttt{/proc/diskstats} and before each test we ran \texttt{sync()}, forcing a write of dirty buffers in the block buffer cache out to disk.
